# digital-wardrobe

./: .gitignore  CONTRIBUTING.md  README.md
.agent/rules/: ai-service-rules.md  coding-style.md  dev-rule.md  git-workflow.md  react-best-practices.md  supabase-workflow.md  testing-standards.md  typescript-best-practices.md  ui-styling.md  wardrobe-front-rules.md
.agent/workflows/: git-commit.md  superpowers-brainstorm.md  superpowers-execute-plan.md  superpowers-write-plan.md
digital-wardrobe/: .eslintrc.cjs  .prettierrc  CONTRIBUTING.md  GEMINI.md  package-lock.json  vitest.config.ts
digital-wardrobe/.agent/: PROJECT_STANDARDS.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md
docs/: PRODUCT_ROADMAP.md  PROJECT_STANDARDS.md
wardrobe-backend/ai-service/: .env  .env.example  .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
wardrobe-backend/ai-service/ai_service/api/: routes.py
wardrobe-backend/ai-service/ai_service/core/: config.py
wardrobe-backend/ai-service/ai_service/models/: outfit.py
wardrobe-backend/ai-service/ai_service/services/: outfit_service.py
wardrobe-backend/ai-service/app/api/: routes.py
wardrobe-backend/ai-service/app/core/: config.py
wardrobe-backend/ai-service/app/services/: outfit_service.py
wardrobe-backend/ai-service/docs/plans/: 2026-02-12-ai-service-refactoring.md
wardrobe-backend/ai-service/tests/: test_outfit_service.py
wardrobe-front/: .editorconfig  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+133 files in other folders)
